--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="https://kusumskarishma.com">
                          <img src="assets/images/kusumlogo2-194x193.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://kusumskarishma.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://www.kusumskarishma.com">
                         Kusum's Karishma Beauty Parlour</a></span>
             </div>
         </div>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="carousel slide cid-rifCbybXiQ" data-interval="false" id="slider1-0">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="carousel slide cid-rifCbybXiQ" data-interval="false" id="slider1-0">
 
     
 
