--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
 
     
 
@@ -112,9 +112,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Manicure</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like. <a href="https://mobirise.co">Learn more...</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
@@ -127,9 +125,7 @@
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Pedicure</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site. <a href="https://mobirise.co">Learn more...</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
@@ -142,9 +138,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Waxing</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible. <a href="https://mobirise.co">Learn more...</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
@@ -157,9 +151,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Bleaching</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app. <a href="https://mobirise.co">Learn more...</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
@@ -183,9 +175,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Facial</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like. <a href="https://mobirise.co">Learn more...</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
@@ -198,9 +188,7 @@
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Hair Re-bonding</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site. <a href="https://mobirise.co">Learn more...</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
@@ -213,9 +201,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Coloring</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible. <a href="https://mobirise.co">Learn more...</a>
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
