--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
 
     
 
@@ -328,7 +328,7 @@
                 <h5 class="pb-3">
                     Address
                 </h5>
-                <p class="mbr-text">Shop no. - 13, Vasundhra Building Behind Audi ShowRoom, Near Heera Panna, Haji Ali, Mumbai, Maharashtra 400026</p>
+                <p class="mbr-text">Shop no. 13, Vasundhra Building Behind Audi ShowRoom, Near Heera Panna, Haji Ali, Mumbai, Maharashtra 400026</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
