--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="#top">Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#info1-f">Services</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#gallery3-7">Gallery</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#testimonials-slider1-a">Testimonials</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-t">Contact Us</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#counters6-i">Services</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#counters6-v">Gallery</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#testimonials-slider1-a">Testimonials</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-t">Contact Us</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
 
     
 
@@ -199,7 +199,7 @@
                         <img src="assets/images/background3.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">HairColoring</h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Hair Coloring</h4>
                         <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
