--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="#top"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#counters6-i"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#counters6-v"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Gallery</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#testimonials-slider1-a"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-t"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#counters6-i"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#counters6-v"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Gallery</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#testimonials-slider1-a"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#counters6-x"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="carousel slide cid-rig5PjJj3V" data-interval="false" id="slider1-u">
 
     
 
