--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://www.kusumskarishma.com">
-                         <img src="assets/images/logocolour-154x143.png" alt="Mobirise" title="" style="height: 4.5rem;">
+                         <img src="assets/images/logocw.png" alt="Mobirise" title="" style="height: 4.5rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-2" href="https://www.kusumskarishma.com">
